--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
+    "bootstrap-icons": "^1.9.1",
     "core-js": "^3.8.3",
     "pinia": "^2.0.21",
     "pinia-plugin-persist": "^1.0.0",
