--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
+    "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "pinia": "^2.0.21",
     "pinia-plugin-persist": "^1.0.0",
