--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
-    "bootstrap": "^5.2.1",
-    "bootstrap-icons": "^1.9.1",
-    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "pinia": "^2.0.21",
     "pinia-plugin-persist": "^1.0.0",
@@ -29,7 +26,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2"
   },
   "eslintConfig": {
     "root": true,
